--- a/espinosaprogreso3/Views/FormularioPage.xaml
+++ b/espinosaprogreso3/Views/FormularioPage.xaml
@@ -1,12 +1,25 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="espinosaprogreso3.Views.FormularioPage"
-             Title="FormularioPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:vm="clr-namespace:espinosaprogreso3.ViewModels">
+    <ContentPage.BindingContext>
+        <vm:FormularioViewModel/>
+    </ContentPage.BindingContext>
+
+    <ContentPage.Title>Abigail Espinosa - 07/07/2003</ContentPage.Title>
+
+    <StackLayout Padding="20">
+        <Label Text="Prenda:" />
+        <Entry Text="{Binding PrendaNombre}" />
+
+        <Label Text="Color:" />
+        <Entry Text="{Binding Color}" />
+
+        <Label Text="Talla:" />
+        <Entry Text="{Binding Talla}" Keyboard="Numeric" />
+
+        <Label Text="¿En inventario?" />
+        <Switch IsToggled="{Binding EnInventario}" />
+
+        <Button Text="Guardar" Command="{Binding GuardarCommand}" />
+    </StackLayout>
 </ContentPage>
