--- a/espinosaprogreso3/AppShell.xaml
+++ b/espinosaprogreso3/AppShell.xaml
@@ -3,13 +3,14 @@
     x:Class="espinosaprogreso3.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:espinosaprogreso3"
-    Shell.FlyoutBehavior="Disabled"
-    Title="espinosaprogreso3">
+    xmlns:local="clr-namespace:espinosaprogreso3.Views">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+    <TabBar>
+        <ShellContent Title="Formulario"
+                      ContentTemplate="{DataTemplate local:FormularioPage}" />
+        <ShellContent Title="Lista"
+                      ContentTemplate="{DataTemplate local:ListaPrendaPage}" />
+        <ShellContent Title="Logs"
+                      ContentTemplate="{DataTemplate local:LogsPage}" />
+    </TabBar>
 </Shell>
